test add py 3.10 to CI matrix

--- a/.github/workflows/mkpy_cid.yml
+++ b/.github/workflows/mkpy_cid.yml
@@ -76,7 +76,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        py_ver: [3.8, 3.9]
+        py_ver: [3.8, 3.9, 3.10]
 
     env:
       PY_VER: ${{ matrix.py_ver }}
