revert py 3.10 CI job, conda mambabuild issue

--- a/.github/workflows/mkpy_cid.yml
+++ b/.github/workflows/mkpy_cid.yml
@@ -76,8 +76,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # py_ver: ["3.8", "3.9", "3.10"]
-        py_ver: ["3.10"]
+        py_ver: ["3.8", "3.9"]
 
     env:
       PY_VER: ${{ matrix.py_ver }}
@@ -123,7 +122,7 @@ jobs:
       - name: conda mambabuild --python=${{ env.PY_VER }} conda
         id: conda-bld
         run: |
-          conda mambabuild --python=$PY_VER --numpy=1.19 conda
+          conda mambabuild --python=$PY_VER conda
           tarball=$(conda build --python=$PY_VER conda --output | tail -1)
           # not converting b.c. of Cythonization
           # conda convert -p osx-64 -p win-64 -o $CONDA_BLD_PATH $tarball
