--- a/.github/workflows/mkpy_cid.yml
+++ b/.github/workflows/mkpy_cid.yml
@@ -76,7 +76,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        py_ver: ["3.8", "3.9"]
+        # py_ver: ["3.8", "3.9"]
+        py_ver: ["3.7"]
 
     env:
       PY_VER: ${{ matrix.py_ver }}
